<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/app_name"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/scanner_settings_general">
        <CheckBoxPreference android:title="@string/scanner_settings_switch" android:key="switch" android:summaryOn="@string/scanner_settings_on" android:summaryOff="@string/scanner_settings_off" />
        <ListPreference android:entries="@array/input_mode" android:title="@string/scanner_settings_input_mode" android:key="input_mode" android:dependency="switch" android:entryValues="@array/input_mode_value" />
        <ListPreference android:entries="@array/end_char" android:title="@string/scanner_settings_end_char" android:key="end_char" android:dependency="switch" android:entryValues="@array/end_char_value" />
        <EditTextPreference android:persistent="true" android:title="@string/scanner_settings_prefix" android:key="prefix" android:dependency="switch" />
        <EditTextPreference android:persistent="true" android:title="@string/scanner_settings_postfix" android:key="postfix" android:dependency="switch" />
        <CheckBoxPreference android:title="@string/scanner_settings_sound" android:key="sound" android:dependency="switch" android:summaryOn="@string/scanner_settings_sound_on" android:summaryOff="@string/scanner_settings_sound_off" />
        <CheckBoxPreference android:title="@string/scanner_settings_vibration" android:key="vibration" android:dependency="switch" android:summaryOn="@string/scanner_settings_vibration_on" android:summaryOff="@string/scanner_settings_vibration_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/scanner_settings_other" android:key="type_setting">
        <PreferenceScreen android:title="@string/scanner_settings_type_title" android:summary="@string/scanner_settings_type_summary" android:dependency="switch">
            <intent android:targetPackage="com.sim.scanner" android:targetClass="com.sim.scanner.CodeTypeSettings" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>