<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/app_name" android:key="container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/code_type_upc_a" android:key="UPC-A" android:defaultValue="@bool/UPC_A" />
    <CheckBoxPreference android:title="@string/code_type_upc_e" android:key="UPC-E" android:defaultValue="@bool/UPC_E" />
    <CheckBoxPreference android:title="@string/code_type_upc_e1" android:key="UPC-E1" android:defaultValue="@bool/UPC_E1" />
    <CheckBoxPreference android:title="@string/code_type_ean_8" android:key="EAN-8" android:defaultValue="@bool/EAN_8" />
    <CheckBoxPreference android:title="@string/code_type_ean_13" android:key="EAN-13" android:defaultValue="@bool/EAN_13" />
    <CheckBoxPreference android:title="@string/code_type_code_128" android:key="Code-128" android:defaultValue="@bool/Code_128" />
    <CheckBoxPreference android:title="@string/code_type_code_39" android:key="Code-39" android:defaultValue="@bool/Code_39" />
    <CheckBoxPreference android:title="@string/code_type_code_93" android:key="Code-93" android:defaultValue="@bool/Code_93" />
    <CheckBoxPreference android:title="@string/code_type_interleaved_2_of_5" android:key="Interleaved-2-of-5" android:defaultValue="@bool/Interleaved_2_of_5" />
    <CheckBoxPreference android:title="@string/code_type_discrete_2_of_5" android:key="Discrete-2-of-5" android:defaultValue="@bool/Discrete_2_of_5" />
    <CheckBoxPreference android:title="@string/code_type_chinese_2_of_5" android:key="Chinese-2-of-5" android:defaultValue="@bool/Chinese_2_of_5" />
    <CheckBoxPreference android:title="@string/code_type_codabar" android:key="Codabar" android:defaultValue="@bool/Codabar" />
    <CheckBoxPreference android:title="@string/code_type_msi" android:key="MSI" android:defaultValue="@bool/MSI" />
    <CheckBoxPreference android:title="@string/code_type_code_11" android:key="Code-11" android:defaultValue="@bool/Code_11" />
    <CheckBoxPreference android:title="@string/code_type_gs1_databar_14" android:key="GSI-DataBar-14" android:defaultValue="@bool/GSI_Databar_14" />
    <CheckBoxPreference android:title="@string/code_type_gs1_databar_limited" android:key="GSI-DataBar-Limited" android:defaultValue="@bool/GSI_Databar_Limited" />
    <CheckBoxPreference android:title="@string/code_type_gs1_databar_expanded" android:key="GSI-DataBar-Expanded" android:defaultValue="@bool/GSI_Databar_Expanded" />
</PreferenceScreen>